--- a/src/app/theme/components/app-aside/app-aside.component.less
+++ b/src/app/theme/components/app-aside/app-aside.component.less
@@ -3,20 +3,18 @@
   height: 100%;
   padding: 0;
   color: #fff;
-  background: #2f353a;
   overflow-x: hidden;
   overflow-y: auto;
-  //margin-top: -8px;
 
   &.collapsed {
     width: 50px;
   }
 
   &-list {
-    height: calc(100% - 50px);
+    height: calc(100vh - 50px);
     overflow-x: hidden;
     overflow-y: auto;
-    padding-top: 16px;
+    padding-top: 0px;
   }
 
   &-collapsed {
