--- a/src/assets/styles/ng-zorro.less
+++ b/src/assets/styles/ng-zorro.less
@@ -1,10 +1,10 @@
-@import "~ng-zorro-antd/ng-zorro-antd.less";
-
+@import './node_modules/ng-zorro-antd/ng-zorro-antd.less';
+/*========================= 覆盖设置slider ==========================*/
 // The prefix to use on all css classes from ant.
 @ant-prefix : ant;
 
 // -------- Colors -----------
-@primary-color : #20a8d8;
+@primary-color : #409EFF;
 @info-color : @blue-6;
 @success-color : @green-6;
 @processing-color : @blue-6;
@@ -40,7 +40,7 @@
 // Background color for `<body>`
 @body-background : #fff;
 // Base background color for most components
-@component-background : #fff;
+@component-background : #ffffff;
 @font-family : "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif,
 "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 @code-family : "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
@@ -326,8 +326,8 @@
 
 // Menu
 // ---
-@menu-inline-toplevel-item-height: 40px;
-@menu-item-height: 40px;
+@menu-inline-toplevel-item-height: 46px;
+@menu-item-height: 46px;
 @menu-collapsed-width: 50px;
 @menu-bg: @component-background;
 @menu-popup-bg: @component-background;
@@ -336,13 +336,16 @@
 @menu-item-active-bg: @item-active-bg;
 @menu-item-active-border-width: 3px;
 @menu-item-group-title-color: @text-color-secondary;
+
+@menu-item-vertical-margin: 0px; //item垂直间距
 // dark theme
 @menu-dark-color: @text-color-secondary-dark;
-@menu-dark-bg: #2f353a;
-@menu-dark-arrow-color: #fff;
-@menu-dark-submenu-bg: rgba(0, 0, 0, 0.2);
+@menu-dark-bg: #263238;
+@menu-dark-arrow-color: #fff; //箭头颜色
+@menu-dark-submenu-bg: #202B30;
 @menu-dark-highlight-color: #fff;
-@menu-dark-item-active-bg: @primary-color;
+@menu-dark-item-active-bg: #2A353B; //选定的菜单的背景色
+@menu-dark-item-hover-bg: #2A353B; //鼠标移动到菜单的背景色
 
 // Spin
 // ---
