--- a/src/assets/styles/ng-zorro.less
+++ b/src/assets/styles/ng-zorro.less
@@ -1,5 +1,6 @@
 @import './node_modules/ng-zorro-antd/ng-zorro-antd.less';
-/*========================= 覆盖设置slider ==========================*/
+@theme: default;
+
 // The prefix to use on all css classes from ant.
 @ant-prefix : ant;
 
