--- a/src/assets/themes/theme-default.less
+++ b/src/assets/themes/theme-default.less
@@ -1,5 +1,11 @@
 @import "./src/assets/styles/ng-zorro.less";
 
+// Tag
+// --
+@tag-default-bg: #ecf5ff;
+@tag-default-color: @primary-color;;
+@tag-font-size: @font-size-sm;
+
 .app-header {
   background: @primary-color;
 }
